# Quick3DViewer

./: CMakeLists.txt  LICENSE  Main.qml  README.md  definevaluehelper.h  dumpcatcher.cpp  dumpcatcher.h  globalconst.h  logger.h  logo.icns  main.cpp  meshimporthelper.cpp  meshimporthelper.h  meshloader.cpp  meshloader.h
.github/workflows/: android.yml  macos.yml  windows-mingw.yml  windows.yml
app/: app.cpp  app.h  apptool.cpp  apptool.h
manager/: logmgr.cpp  logmgr.h
mesh/: gltfmeshimporter.cpp  gltfmeshimporter.h  meshimporterutils.cpp  meshimporterutils.h  meshimporthelper.cpp  meshimporthelper.h  meshloader.h  objmeshimporter.cpp  objmeshimporter.h  plymeshimporter.cpp  plymeshimporter.h  stlmeshimporter.cpp  stlmeshimporter.h
qml/: main.qml
src/: main.cpp  meshloader.cpp  meshloader.h
